// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Main balances page 1`] = `
<div>
  <div
    data-testid="wrapper"
  >
    <div
      class="sc-60f604f0-0 hxgFlm"
    >
      <span
        style="box-sizing: border-box; display: inline-block; overflow: hidden; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; position: relative; max-width: 100%;"
      >
        <span
          style="box-sizing: border-box; display: block; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; max-width: 100%;"
        >
          <img
            alt=""
            aria-hidden="true"
            src="data:image/svg+xml,%3csvg%20xmlns=%27http://www.w3.org/2000/svg%27%20version=%271.1%27%20width=%27120%27%20height=%2728%27/%3e"
            style="display: block; max-width: 100%; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px;"
          />
        </span>
        <img
          alt="Utrust"
          data-nimg="intrinsic"
          decoding="async"
          src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
          style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
        />
        <noscript />
      </span>
    </div>
    <div
      class="sc-da1060d0-0 fFYZiQ"
    >
      <header
        class="sc-da1060d0-1 eHCwEr"
      >
        My Ethereum addresses
      </header>
      <table
        class="sc-50244374-0 dsjiEy"
      >
        <tbody>
          <tr
            class="sc-50244374-1 cYIIdr"
          >
            <td>
              <span
                class="sc-50244374-2 bGcnud"
              >
                TEST_ADDRESS1
              </span>
            </td>
            <td
              class="sc-50244374-3 jGtUXk"
            >
              <span
                class="sc-50244374-4 jMsZsK"
              >
                TEST_VALUE1
              </span>
              <span
                class="sc-50244374-5 hbdULL"
              >
                 ETH
              </span>
            </td>
          </tr>
          <tr
            class="sc-50244374-1 cYIIdr"
          >
            <td>
              <span
                class="sc-50244374-2 bGcnud"
              >
                TEST_ADDRESS2
              </span>
            </td>
            <td
              class="sc-50244374-3 jGtUXk"
            >
              <span
                class="sc-50244374-4 jMsZsK"
              >
                TEST_VALUE2
              </span>
              <span
                class="sc-50244374-5 hbdULL"
              >
                 ETH
              </span>
            </td>
          </tr>
          <tr
            class="sc-50244374-1 cYIIdr"
          >
            <td>
              <span
                class="sc-50244374-2 bGcnud"
              >
                TEST_ADDRESS3
              </span>
            </td>
            <td
              class="sc-50244374-3 jGtUXk"
            >
              <span
                class="sc-50244374-4 jMsZsK"
              >
                TEST_VALUE3
              </span>
              <span
                class="sc-50244374-5 hbdULL"
              >
                 ETH
              </span>
            </td>
          </tr>
        </tbody>
      </table>
      <footer
        class="sc-da1060d0-2 cunNGN"
      >
        <span>
          Please copy the address from which you wish to send money.
        </span>
        <button
          class="sc-da1060d0-3 fUffHN"
          data-testid="next"
          type="button"
        >
          Next
        </button>
      </footer>
    </div>
  </div>
</div>
`;

exports[`Main send page 1`] = `
<div>
  <div
    data-testid="wrapper"
  >
    <div
      class="sc-60f604f0-0 hxgFlm"
    >
      <span
        style="box-sizing: border-box; display: inline-block; overflow: hidden; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; position: relative; max-width: 100%;"
      >
        <span
          style="box-sizing: border-box; display: block; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; max-width: 100%;"
        >
          <img
            alt=""
            aria-hidden="true"
            src="data:image/svg+xml,%3csvg%20xmlns=%27http://www.w3.org/2000/svg%27%20version=%271.1%27%20width=%27120%27%20height=%2728%27/%3e"
            style="display: block; max-width: 100%; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px;"
          />
        </span>
        <img
          alt="Utrust"
          data-nimg="intrinsic"
          decoding="async"
          src="/Logo.svg"
          srcset="/Logo.svg 1x, /Logo.svg 2x"
          style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
        />
        <noscript />
      </span>
    </div>
    <div
      class="sc-da1060d0-0 dVsQgh"
    >
      <header
        class="sc-da1060d0-1 eHCwEr"
      >
        Please fill the form to send Ethereum
      </header>
      <form
        class="sc-b81309d0-0 ePlrqb"
        id="transaction"
      >
        <div
          class="sc-6f71e095-0 zKiGe"
        >
          <label
            class="sc-6f71e095-1 dpiAKW"
            for="from"
          >
            From
          </label>
          <input
            class="sc-6f71e095-2 mOreu"
            data-testid="from"
            id="from"
            placeholder="Your address"
            value=""
          />
        </div>
        <div
          class="sc-6f71e095-0 zKiGe"
        >
          <label
            class="sc-6f71e095-1 dpiAKW"
            for="to"
          >
            To
          </label>
          <input
            class="sc-6f71e095-2 mOreu"
            data-testid="to"
            id="to"
            placeholder="Destination address"
            value=""
          />
        </div>
        <div
          class="sc-6f71e095-0 zKiGe"
        >
          <label
            class="sc-6f71e095-1 dpiAKW"
            for="amount"
          >
            Amount
          </label>
          <input
            class="sc-6f71e095-2 mOreu"
            data-testid="amount"
            id="amount"
            placeholder="Ethereum amount"
            value=""
          />
        </div>
      </form>
      <footer
        class="sc-da1060d0-2 MrGpr"
      >
        <button
          class="sc-da1060d0-3 fUffHN"
          data-testid="send"
          form="transaction"
          type="submit"
        >
          Send
        </button>
      </footer>
    </div>
  </div>
</div>
`;

exports[`Main success page 1`] = `
<div>
  <div
    data-testid="wrapper"
  >
    <div
      class="sc-60f604f0-0 hxgFlm"
    >
      <span
        style="box-sizing: border-box; display: inline-block; overflow: hidden; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; position: relative; max-width: 100%;"
      >
        <span
          style="box-sizing: border-box; display: block; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; max-width: 100%;"
        >
          <img
            alt=""
            aria-hidden="true"
            src="data:image/svg+xml,%3csvg%20xmlns=%27http://www.w3.org/2000/svg%27%20version=%271.1%27%20width=%27120%27%20height=%2728%27/%3e"
            style="display: block; max-width: 100%; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px;"
          />
        </span>
        <img
          alt="Utrust"
          data-nimg="intrinsic"
          decoding="async"
          src="/Logo.svg"
          srcset="/Logo.svg 1x, /Logo.svg 2x"
          style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
        />
        <noscript />
      </span>
    </div>
    <div
      class="sc-da1060d0-0 dVsQgh"
    >
      <header
        class="sc-da1060d0-1 eHCwEr"
      >
        Transaction complete
      </header>
      <div
        class="sc-70be64b8-1 eYoFSo"
      >
        <div
          class="sc-70be64b8-0 jflKBd"
        >
          <span
            style="box-sizing: border-box; display: inline-block; overflow: hidden; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; position: relative; max-width: 100%;"
          >
            <span
              style="box-sizing: border-box; display: block; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; max-width: 100%;"
            >
              <img
                alt=""
                aria-hidden="true"
                src="data:image/svg+xml,%3csvg%20xmlns=%27http://www.w3.org/2000/svg%27%20version=%271.1%27%20width=%27100%27%20height=%27100%27/%3e"
                style="display: block; max-width: 100%; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px;"
              />
            </span>
            <img
              alt="success"
              data-nimg="intrinsic"
              decoding="async"
              src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
              style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
            />
            <noscript />
          </span>
        </div>
        <div
          class="sc-70be64b8-2 hIOwaP"
        >
           You sent
        </div>
        <div
          class="sc-70be64b8-3 hkrVfx"
        >
          TEST_VALUE
           ETH
        </div>
        <hr
          class="sc-70be64b8-4 ifepvz"
        />
        <div
          class="sc-70be64b8-2 hIOwaP"
        >
          From
        </div>
        <div
          class="sc-70be64b8-5 jEjKnN"
        >
          TEST_FROM
        </div>
        <div
          class="sc-70be64b8-2 hIOwaP"
        >
          To
        </div>
        <div
          class="sc-70be64b8-5 jEjKnN"
        >
          TEST_TO
        </div>
      </div>
    </div>
  </div>
</div>
`;
